[package]
name = "sejasa"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4","v7", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
anyhow = "1.0.100"
clap = { version = "4.4", features = ["derive"] }

# API Layer (Axum & Tower)
axum = { version = "0.8.7", features = ["macros", "ws", "multipart"], optional = false }
tower-http = { version = "0.6", features = ["trace" , "cors", "compression-gzip", "timeout", "catch-panic"], optional = false }
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = false }
tokio-stream = "0.1"
futures-util = "0.3.32"

# Auth & Crypto Layer
argon2 = { version = "0.5", optional = false }
password-hash = { version = "0.5", optional = false }
jsonwebtoken = { version = "10", features = ["rust_crypto"], optional = false }
base64 = "0.21"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json"], optional = false }
http = "1.4.0"